--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT= 3000
 DB_CNN= mongodb+srv://MEAN_USER:WnxTRIdYEdynzzRF@micluster.m5ni6.mongodb.net/HospitalDB
+JWT_KEY= Jolasdn38"!#df#afkn=?fjk)23fdaf*ajkjy
