Fin de seccion 12

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT= 3000
 DB_CNN= mongodb+srv://MEAN_USER:WnxTRIdYEdynzzRF@micluster.m5ni6.mongodb.net/HospitalDB
 JWT_KEY= Jolasdn38"!#df#afkn=?fjk)23fdaf*ajkjy
+
+GOOGLE_ID= 1052704009353-blvpcdqrar948gh0s1f9kkanh5ur94o6.apps.googleusercontent.com
+GOOGLE_SECRET= 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
