--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.1",
+    "google-auth-library": "^8.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "uuid": "^8.3.2"
