--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon index.js",
-    "start": "node index.js",
-    "heroku-postbuild": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
